# dockrized_wordCount_Project

./: .gitignore  Dockerfile  README.md  my_test_file.txt  pyproject.toml
wordcount_tool/: cli.py
wordcount_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
