[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordcount-tool"
version = "0.1.0"
authors = [
  { name="triv321", email="triv@example.com" },
]
description = "A simple and professional command-line tool to count word frequencies in a text file."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
wordcount = "wordcount_tool.cli:main"